--- a/nhiengom.html
+++ b/nhiengom.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Nhiên Gốm</title>
@@ -24,7 +24,7 @@
 <body>
     <div class="container">
 
-        <h2>Nhiên Gốm</h2>
+        <h1>Nhiên Gốm</h1>
         <a href="https://www.facebook.com/gomnhat1001/" rel="nofollow">
          </a><br /> <br />
 
